# wallpaper-slideshow

./: README.md  meson.build  meson_options.txt
data/: meson.build  module-icon.edc  module.desktop
src/: e_mod_config.c  e_mod_main.c  e_mod_main.h  meson.build
